Thu Nov 23 12:44:01 GMT 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Append to string, rather than replace it.  Tiny change to
	  omindex, big speedup with large files.

Thu Nov 23 11:55:27 GMT 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Remove dependency on index_utils.h, which has been removed.

Wed Nov 22 16:05:01 GMT 2000 Olly Betts

	* Corrected a comment.

Wed Nov 22 13:07:59 GMT 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Change examples to use quartz rather than sleepycat.

Fri Nov 17 16:38:57 GMT 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Declare this to be version 0.4.0

Fri Nov 17 16:28:06 GMT 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Fix build system of indexergui so that it can build with an
	  uninstalled library.

Tue Nov 14 19:32:46 GMT 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* The indexer GUI can load graphs from XML files and display them
	  in a partly sensible manner.  Nodes can be dragged around.

Mon Nov 13 18:43:24 GMT 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Added lots of file for the indexer GUI stuff (as yet incomplete).

Tue Oct 31 18:19:06 GMT 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Rearranged the code in the example indexer.

Tue Oct 31 16:16:31 GMT 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* The example indexer now seems to work.

Mon Oct 30 19:03:56 GMT 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Nearly complete example XML-described indexer

Fri Oct 27 19:57:44 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Put together more of the indexer's XML description.

Thu Oct 26 18:30:07 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Indexer example added (incomplete)

Wed Sep 20 16:09:35 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Declare this to be version 0.3.1

Tue Sep 19 16:19:07 BST 2000 Olly Betts
