@@ -35,9 +35,9 @@ int main(int argc, char *argv[])
     try {
 	// Make the database
 	OmSettings db_parameters;
-	settings.set("backend", "quartz");
-	settings.set("quartz_dir", argv[1]);
-	OmWritableDatabase database(settings);
+	db_parameters.set("backend", "sleepycat");
+	db_parameters.set("sleepycat_dir", argv[1]);
+	OmWritableDatabase database(db_parameters);
 
 	// Make the indexer
 	OmIndexerBuilder builder;
